--- a/COMP_LAB.html
+++ b/COMP_LAB.html
@@ -117,6 +117,53 @@
 
                 <p id="lab-heading">Laboratories</p>
 
+                <div class="it_labcontain">
+                    <ul style="margin-left: 1.2rem;">
+                        <li>The department is equipped with state of art, ultra-modern and sophisticated programming labs and classrooms with fully updated facility.</li>
+                        <li>The department has a well-established LAN of 150 Machines. The ambience and the ergonomic design of the labs enhance students' appetite for acquiring programming skills.</li>
+                        <li>The internet facility with 1157 Mbps leased line, Wi-Fi facility is available in campus to students and faculty.</li>
+                    </ul>
+                    <br>
+                    <p>The department has following</p>
+                    <div class="it_labcard">
+                        <div class="lab_cardleft">
+                            <p style="font-weight: 700;">Laboratories:</p>
+                            <br>
+                            <ul>
+                                <li>CSL Lab I & CSL Lab II equipped with 60 PCs used for programming in C, C++, JAVA, Python, R programming, DBMS, Visual Studio and Android programming</li>
+                                <li>CSL Lab III equipped with 25 PCs used for programming in C, C++, JAVA and Visual Studio and cloud computing setup.</li>
+                                <li>Hardware Lab (Texas Lab) equipped with 30 PC's, have hardware instruments to conduct hardware practical's. Lab also consists kits of BEGALBONE BLACK to perform mini-projects on embedded system etc.</li>
+                                <li>CSL IV equipped with 20 PCs used for programming in C, C++, JAVA programming</li>
+                                <li>CSL V equipped with 20 PCs used for programming in C, C++, JAVA programming</li>
+                                <li>CSL VI equipped with 05 PCs used for students, Cyber Security Project, BE Project</li>
+                            </ul>
+                        </div>
+
+                        <div class="lab_cardleft">
+                            <p style="font-weight: 700;">Software :</p>
+                            <br>
+                            <ul>
+                                <li>Open source software’s (java, python, g++, php etc.…)</li>
+                                <li>Microsoft Windows 8 and Windows 10</li>
+                                <li>Microsoft project</li>
+                                <li>Microsoft Office 2013</li>
+                                <li>Code Block</li>
+                                <li>Visual Studio</li>
+                                <li>Oracle 11g</li>
+                                <li>Sift/ Caine</li>
+                                <li>VMWare</li>
+                                <li>Masm/ Nasm</li>
+                                <li>Mongo DB/ MySQL</li>
+                                <li>QT framework</li>
+                                <li>Wireshark/Ethereal and Packet Tracer</li>
+                                <li>Raspberry Pi/Arduino Programming</li>
+                                <li>Unity, C#, Blender</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <br>
+                    <p>All systems are dual boot. An ultra-modern classrooms equipped with video projection system and computer caters for conventional as well as e-learning needs.</p>
+                </div>
                 <div class="softwarelab-1">
                     <p id="sw1">Hardware Lab</p>
                     <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-LAB%2FCompHardwareLab.png?alt=media&token=70e646c3-7ed8-4660-bb9a-3e6f1cd16106" id="sw-lab1-pic">
