--- a/IT_LAB.html
+++ b/IT_LAB.html
@@ -116,7 +116,38 @@
             <div id="lab-section">
 
                 <p id="lab-heading">Laboratories</p>
+                <div class="it_labcontain">
+                    <p>The department is equipped with state of art, Ultra-modern and sophisticated programming labs and classrooms with fully updated faculty. The department has a well-established LAN of 140 IBM and HP machines. The ambience and the ergonomic design of the labs enhance students' appetite for acquiring programming skills. The internet facility with 500Mbps leased line and Wi-Fi is available to the students.</p>
+                    <br>
+                    <p>The department has following</p>
 
+                    <div class="it_labcard">
+                        <div class="lab_cardleft">
+                            <p style="font-weight: 700;">Laboratories:</p>
+                            <br>
+                            <ul>
+                                <li>Machine Learning Lab equipped with high configuration PCs with 1 HPC server used for R&D and projects.</li>
+                                <li>Programming Lab I & Lab II equipped with latest PCs used for programming in C & C++.</li>
+                                <li>Lab III equipped with high configuration PCs with 2 servers used for .NET, Networking Labs etc.</li>
+                                <li>All systems are dual boot.</li>
+                                <li>An ultra modern lecture hall equipped with video projection systems and class room for conventional as well as e-learning needs of the student.</li>
+                            </ul>
+                        </div>
+
+                        <div class="lab_cardleft">
+                            <p style="font-weight: 700;">Software :</p>
+                            <br>
+                            <ul>
+                                <li>Oracle 10g - 100 user</li>
+                                <li>IBM Rational Software Architect - 30 user</li>
+                                <li>IBM Rational Suite Enterprise – 30 user</li>
+                                <li>Packet Tracer 5.3</li>
+                                <li>Network Simulator 2 and 3</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
                 <div class="softwarelab-1">
                     <p id="sw1">Software lab-1</p>
                     <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-LABORATORY%2FIT-Lab1.jpg?alt=media&token=f227f98d-adfa-46cc-83fb-9c091c5f3b9b" id="sw-lab1-pic">
