--- a/MECH_SPECIAL.html
+++ b/MECH_SPECIAL.html
@@ -119,7 +119,7 @@
                                 <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem;">
                            </div>
                             <div>
-                                <a href="#">Brochure</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH_SPECIAL%2FAIT-Mech-StudentsProjectBasedTraining-CFD.pdf?alt=media&token=ada638d7-21e7-4ff6-89a5-e2276bee6ab8">Brochure</a>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                                 <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem;">
                            </div>
                             <div>
-                                <a href="#">(Model: DUCOM TR-20LE-CHM-600-PHM-400)</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH_SPECIAL%2FAIT-WearAndFrictionMonitor.pdf?alt=media&token=e6f0d9bd-5a8c-48a9-a944-3d14bbe0dc74">(Model: DUCOM TR-20LE-CHM-600-PHM-400)</a>
                             </div>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                                 <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem;">
                            </div>
                             <div>
-                                <a href="#">Course on CAD : CATIA and CAE : Hyper Works Level 1</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH_SPECIAL%2FVAC%20all.pdf?alt=media&token=fca15dcf-b426-4fbb-8cdb-e10443e7d1db">Course on CAD : CATIA and CAE : Hyper Works Level 1</a>
                             </div>
                         </div>
                     </div>
@@ -166,18 +166,18 @@
                            <div class="special_u2">
                             <div class="special_u3">
                                 <div class="su_img">
-                                    <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem;">
+                                    <img src="vector 3.png" alt="" style="height: 1.2rem; width: 1.2rem;">
                                </div>
                                 <div>
-                                    <a href="https://www.aitpune.com/CarCutSections.aspx">Cut-Section Model of a Passenger Car</a>
+                                    <a href="MECH_CARCUTSECTION.html#hod_content">Cut-Section Model of a Passenger Car</a>
                                 </div>
                             </div>
                             <div class="special_u3">
                                 <div class="su_img">
-                                    <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem;">
+                                    <img src="vector 3.png" alt="" style="height: 1.2rem; width: 1.2rem;">
                                </div>
                                 <div>
-                                    <a href="https://www.aitpune.com/BMWCarCutSections.aspx">BMW Twinpower Turbo In-Line 4-Cylinder 2.0 Litre Diesel Engine and 8-Speed Steptronic Automatic Transmission</a>
+                                    <a href="MECH_BMW_SECTION.html#BMW_Section">BMW Twinpower Turbo In-Line 4-Cylinder 2.0 Litre Diesel Engine and 8-Speed Steptronic Automatic Transmission</a>
                                 </div>
                             </div>
                            </div>
