--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <div class="logo">
         <div class="logoimg"><img src="hexagon (1).png" alt="logo" height="40px" width="40px"></div>
       </div>
-      <div class="linkinfo"><u ><a style="color: white;" href="NAAC_SSR.html"> NAAC </a></u></div>
+      <div class="linkinfo"><u ><a style="color: white;" href="NAAC_IQAC.html"> NAAC </a></u></div>
     </div>
     <div class="row">
       <div class="logo">
