--- a/MECH_LAB.html
+++ b/MECH_LAB.html
@@ -200,13 +200,11 @@
                         <div class="utilization">Utilization of Laboratory:</div>
                         <div class="util-for1">First (All Branches) and Third Year</div>
                         <div class="view_more">
-                            <a href="https://www.aitpune.com/Notices/Sports%20Aakriti%202023%20-%2024%20Non%20Instructional%20Day.pdf" id="but">More Laboratries</a>
+                            <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-LAB%2FLaboratories.pdf?alt=media&token=31487088-dbc1-4426-9555-3692e3219e85" target="_blank" id="but">More Laboratries</a>
                         </div>
                     </div>
                     
                 </div>
-
-                
 
 
             </div>
