comp and entc faculty
link of erp updated and details checked

--- a/COMP_DEP.html
+++ b/COMP_DEP.html
@@ -91,7 +91,7 @@
             </div>
             <div class="content_campus">
                <div class="para2">
-                <p>Computer engineering.</p>
+                <p>Computer Engineering.</p>
                </div>
                 <div class="para3">
                     <p>
