--- a/COMP_HOD_DESk.html
+++ b/COMP_HOD_DESk.html
@@ -193,7 +193,7 @@
                 .then(data => {
                     const tempElement = document.createElement('div');
                     tempElement.innerHTML = data;
-                    const specificContent = tempElement.querySelector(#${elementId});
+                    const specificContent = tempElement.querySelector(`#${elementId}`);
 
                     document.getElementById('mainContent').innerHTML = '';
                     document.getElementById('mainContent').appendChild(specificContent);
