--- a/MECH_EXAM.html
+++ b/MECH_EXAM.html
@@ -56,7 +56,7 @@
             </div>
             <div class="content_campus">
                <div class="para2">
-                <p>Mechanical Engineering.</p>
+                <p>Mechanical Engineering</p>
                </div>
                 <div class="para3">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, dolore!</p>
