--- a/MECH_DEPT.html
+++ b/MECH_DEPT.html
@@ -91,7 +91,7 @@
             </div>
             <div class="content_campus">
             <div class="para2">
-                <p>Mechanical engineering.</p>
+                <p>Mechanical engineering</p>
             </div>
                 <div class="para3">
                     <p>"From Blueprint to Reality: Mechanical Marvels at AIT."</p>
