IT Dept update compleate

--- a/IT_HOD_DESk.html
+++ b/IT_HOD_DESk.html
@@ -154,8 +154,8 @@
                         <div class="hod_contain">
                             <p class="hod_name">Dr.(Mrs)Sangeeta Jadhav</p>
                             <p class="hod_rank">Professor and Head of Dept</p>
-                            <div class="hod_mail"><span>Contact :</span><a>7249250184 ext 2150</a></div>    
-                            <div class="hod_mail"><span>Email :</span><a>hodit@aitpune.edu.in</a>
+                            <div class="hod_mail"><span>Contact :</span><a href="tel:+917249250184"> 724925-0184 / 2150</a></div>    
+                            <div class="hod_mail"><span>Email :</span><a href="mailto:hodit@aitpune.edu.in">hodit@aitpune.edu.in</a>
                             </div>
                             <div class="hod_icon">
                                 <a href="https://scholar.google.co.in/citations?hl=en&user=OeKBucEAAAAJ"><img src="icons8-google-scholar-480.png" alt=""></a>
