--- a/IT_Roll.html
+++ b/IT_Roll.html
@@ -114,7 +114,7 @@
                 <div class="project_more">
                     <div class="project_link" style="margin-top: 0.2rem;">
                         <img src="vector 2.png" alt="">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ROLL%2FSE%20IT.pdf?alt=media&token=7dd489f7-5ddd-450b-bf78-e051350714f8" target="_blank">SE-IT</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ROLL%2FSE%20-%20IT.pdf?alt=media&token=1b279d52-5197-4d38-a642-825f1c6ba60e" target="_blank">SE-IT</a>
                     </div>
                     <div style="margin-top: 0.6rem;">Counselor List</div>
                     <div>Dr. Rupali Bagate (4201 to 4215)</div>
@@ -126,7 +126,7 @@
                 <div class="project_more">
                     <div class="project_link" style="margin-top: 0.2rem;">
                         <img src="vector 2.png" alt="">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ROLL%2FTE%20IT.pdf?alt=media&token=18bd6070-acc8-4f1d-ba1b-898c844a8cbe" target="_blank">TE-IT</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ROLL%2FTE%20-%20IT.pdf?alt=media&token=d3b1268e-9874-4fdb-aa46-b77a14f0e400" target="_blank">TE-IT</a>
                     </div>
                     <div style="margin-top: 0.6rem;">Counselor List</div>
                     <div>Dr. Rahul Desai (4301 to 4315)</div>
@@ -138,7 +138,7 @@
                 <div class="project_more">
                     <div class="project_link" style="margin-top: 0.2rem;">
                         <img src="vector 2.png" alt="">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ROLL%2FBE%20IT.pdf?alt=media&token=66480a03-29dc-492e-aa71-815a8ddb7e27" target="_blank">BE-IT</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ROLL%2FBE%20-%20IT.pdf?alt=media&token=dd52d0b3-bc23-4e04-9935-86ee6d6fa06b" target="_blank">BE-IT</a>
                     </div>
                     <div style="margin-top: 0.6rem;">Counselor List</div>
                     <div>Dr. Sangeeta Jadhav (4401 to 4415)</div>
