--- a/LIBRARY_E_LIB.html
+++ b/LIBRARY_E_LIB.html
@@ -73,17 +73,20 @@
         <div class="g20_logo"><img src="g20.jpg" ></div>
     </div>
     <div class="camp">
-        <div class="about">Admission</div>
-        <div class="about1">
-            Engineering is about turning ideas into reality through innovation and practical problem-solving, shaping the future one design at a time.</div>
+        <div class="about">E-LIBRARY</div>
+        <div class="about1">"Explore the world within walls, where every book is a doorway to infinite possibilities – Welcome to our Library Haven!"</div>
     </div>
 
     <div class="about_us">
         <div class="about_content">
-            <h2 class="ab" style="text-align: left;">Welcome to AIT - Admissions</h2>
-            <p class="about_content" style="width: 27.81rem;">The Birla Institute of Technology and Science (BITS) Pilani, recognized as an “Institution of Eminence” by Ministry of Education, Government of India, is India’s leading Institute of Higher Education and a deemed to be university, with an illustrious legacy, modern campuses and eminent alumni in leadership positions across the world.</p>
+            <h2 class="ab" style="text-align: left;">Library(Knowledge Hub)</h2>
+            <p class="about_content" style="width: 27.81rem;">
+                Books serve as indispensable tools for college students, fulfilling a multitude of roles in their academic and personal lives. Primarily, they provide essential academic resources, aiding students in understanding complex subjects and excelling in coursework. Additionally, books stimulate critical thinking by exposing students to diverse perspectives and encouraging analytical thought. Beyond academics, books offer avenues for personal enrichment, relaxation, and creative inspiration, contributing to students' holistic development. 
+                <br>
+                <br>
+                They also serve as cultural connectors, fostering empathy and understanding by introducing students to diverse identities and experiences. Ultimately, books play a vital role in shaping the intellectual, emotional, and social growth of college students throughout their academic journey.</p>
             </br>
-            <p class="about_content" style="width: 27.81rem;">The Institute's commitment to excellence, adherence to merit, transparency, innovation, and enterprise have characterized its steady march to eminence. It is the only Private University which DST, Government of India has identified to establish a Technology Innovation Hub under the Bio-CPS vertical with a grant of Rs 125 Crore.</p>
+            
         </div>
         <div class="rectangle_blue"></div>
         <div class="about_image">
@@ -91,17 +94,15 @@
         </div>
     </div>
     <div class="main">
-        <section class="table">
+        <section class="table" style="height: 23rem;">
             <ul>
-                <a href="#" class="fetch-link active" data-url="LIBRARY_E_LIB.html" id="tabletop" data-target-container="mainContent" style="text-decoration: none;">ELibrary</a>
-                <a href="#" class="fetch-link" data-url="FEE_STRUCTURE.html" data-target-container="mainContent" style="text-decoration: none;">Fees Structure</a>
-                <a href="#" class="fetch-link" data-url="entrance.html" data-target-container="mainContent"  style="text-decoration: none;">Entrance Examination</a>
-                <a href="#" class="fetch-link" data-url="ANNOUNCEMENT.html" data-target-container="mainContent"  style="text-decoration: none;">Announcements</a>
-                <a href="#" class="fetch-link" data-url="Migration.html" data-target-container="mainContent"  style="text-decoration: none;margin-bottom: 23px;">Migration to Second/Third Year</a>
-                <a href="#" class="fetch-link" data-url="ME_admissiom.html" data-target-container="mainContent"  style="text-decoration: none;margin-bottom: 23px;">Admissions: ME (Data Science)</a>
-                <a href="#" class="fetch-link" data-url="FAQ.html" data-target-container="mainContent"  style="text-decoration: none;">FAQ</a>                
-                <a href="#" class="fetch-link" data-url="CONTACTINFO.html" data-target-container="mainContent"  style="text-decoration: none;">Contact Information</a>
-                <a href="#" class="fetch-link" data-url="BRIGHT_PLA.html" data-target-container="mainContent"  style="text-decoration: none;">Bright Placements</a>
+                <a href="#" class="fetch-link active" data-url="LIBRARY_E_LIB.html" id="tabletop" data-target-container="mainContent" style="text-decoration: none;">ELibrary & E-Resources</a>
+                <a href="#" class="fetch-link" data-url="LIBRARY_ABOUT.html" data-target-container="mainContent" style="text-decoration: none;">About Library</a>
+                <a href="#" class="fetch-link" data-url="LIBRARY_STAFF.html" data-target-container="mainContent"  style="text-decoration: none;">Staff Members</a>
+                <a href="#" class="fetch-link" data-url="LIBRARY_RESOURCES.html" data-target-container="mainContent"  style="text-decoration: none;">Library Resources</a>
+                <a href="#" class="fetch-link" data-url="LIBRARY_EJOUNRALS.html" data-target-container="mainContent"  style="text-decoration: none;">Free E-Journals Links</a>
+                <a href="#" class="fetch-link" data-url="LIBRARY_LINKS.html" data-target-container="mainContent"  style="text-decoration: none;">Useful Links</a>            
+                <a href="#" class="fetch-link" data-url="LIBRARY_CONTACT.html" data-target-container="mainContent"  style="text-decoration: none;">Contact Us</a>
 
             </ul>
         </section> 
@@ -115,6 +116,72 @@
                         </div>
                         <div class="details_elib">
                             <h3>Details of E-Resources Present in Library</h3>
+
+                            <table id="myTable" style="margin-left: 0;">
+                                <thead>
+                                    <td>No.</td>
+                                    <td>Publisher</td>
+                                    <td>Subject Area</td>
+                                    <td>E-Content</td>
+                                </thead>
+                                <tbody>
+                                    <tr id="row1">
+
+                                        <td>1.</td>
+                                        <td><a href="http://ieeexplore.ieee.org/">IEEE(ASPP) + POP ALL</a></td>
+                                        <td>Computer, IT E &TC and Mechanical</td>
+                                        <td>204 e-journals & 15451 IEEE Conference Proceedings</td>
+                                    </tr>
+                                    <tr id="row2">
+                                        <td>2.</td>
+                                        <td><a href="https://link.springer.com/">Springer Nature 3 Subject Collection</a></td>
+                                        <td>Computer IT and E & TC</td>
+                                        <td>479 e-journals</td>
+                                    </tr>
+                                    <tr id="row3">
+                                        <td>3.</td>
+                                        <td><a href="http://asmedigitalcollection.asme.org/">	ASME</a></td>
+                                        <td>Mechanical</td>
+                                        <td>33 e-journals</td>
+                                    </tr>
+                                    <tr id="row4">
+                                        <td>4.</td>
+                                        <td><a href="http://accessengineeringlibrary.com/">	McGraw Hill's Access Engineering Library</a></td>
+                                        <td>All Engineering</td>
+                                        <td>947 e-books</td>
+                                    </tr>
+                                    <tr id="row5">
+                                        <td>5.</td>
+                                        <td><a href="http://sciencedirect.com/">ELSEVIER - Science Direct</a></td>
+                                        <td>All Engineering</td>
+                                        <td>275 e-journals</td>
+                                    </tr>
+                                    <tr id="row4">
+                                        <td>6.</td>
+                                        <td><a href="https://aitpune.knimbus.com/user#/home">Videeya E-Books</a></td>
+                                        <td>All Engineering</td>
+                                        <td>27 E-Books</td>
+                                    </tr>
+                                    <tr id="row4">
+                                        <td>7.</td>
+                                        <td><a href="https://link.springer.com/">Springer Nature</a></td>
+                                        <td>All Engineering</td>
+                                        <td>877 E-Books</td>
+                                    </tr>
+                                    <tr id="row4">
+                                        <td>8.</td>
+                                        <td><a href="https://www.expresslibrary.mheducation.com/bookshelf">	McGraw Hill Express Library</a></td>
+                                        <td>All Engineering</td>
+                                        <td>37 E-Books</td>
+                                    </tr>
+                                    <tr id="row4">
+                                        <td>9.</td>
+                                        <td><a href="http://www.delnet.in/">DELNET Database</a></td>
+                                        <td>All Engineering</td>
+                                        <td>E-Journals, E-Books and Thesis/ Dissertations</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
 
                     </div>
