--- a/MECH_DEPT.html
+++ b/MECH_DEPT.html
@@ -136,7 +136,7 @@
                     <a href="MECH_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
                     <a href="MECH_SPECIAL.html" class="fetchLink" data-elementid="activity_content">Special Services</a>
                     <a href="MECH_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
-                    <a href="MECH_ACHIEVEMENT" class="fetchLink" data-elementid="timetable">Achievement and Messages</a>
+                    <a href="MECH_ACHIEVEMENT.html" class="fetchLink" data-elementid="timetable">Achievement and Messages</a>
                     <a href="MECH_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
                     <a href="MECH_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
                     <a href="MECH_AAC.html" class="fetchLink" data-elementid="timetable">AAC & Dept Meeting</a>
