responsiveness of IT page done, content responsiveness left

--- a/Departments/IT/IT_INDUSTRY.html
+++ b/Departments/IT/IT_INDUSTRY.html
@@ -111,7 +111,7 @@
             </section>
 
             
-            <div id="RandD" style="margin-top: 108px;margin-left: 30px;">
+            <div id="RandD">
                 <h1 style="color: #0C2695; font-size: 2rem;">
                     Industry Institute Interaction
                 </h1>
