--- a/Departments/IT/IT_RESEARCH.html
+++ b/Departments/IT/IT_RESEARCH.html
@@ -110,7 +110,7 @@
                     <a href="IT_MAGZINE.html" class="prior">E-Magazine</a>
                 </ul>
             </section>
-            <div id="RandD" style="margin-left: 30px; margin-top: 108px;">
+            <div id="RandD">
                 <h1 style="color: #0C2695; font-size: 2rem;">
                     Research & Development
                 </h1>
