internally linked all the dapartments

--- a/ENTC_DEPARTMENT.html
+++ b/ENTC_DEPARTMENT.html
@@ -75,10 +75,10 @@
                 <div class="textii">
                     <ul>
                         <a href="ABOUT_US.html" style="text-decoration: none; color: black;">About Us</a>
-             <a href="Admission1.html" style="text-decoration: none; color: black;">Admissions</a>
-             <a href="ResearchDean.html" style="text-decoration: none; color: black;">Research</a>
-             <a href="student.html" style="text-decoration: none; color: black;">Students</a>
-             <a href="ADMIN_JD.html" style="text-decoration: none; color: black;">Admin</a>
+                        <a href="Admission1.html" style="text-decoration: none; color: black;">Admissions</a>
+                        <a href="ResearchDean.html" style="text-decoration: none; color: black;">Research</a>
+                        <a href="student.html" style="text-decoration: none; color: black;">Students</a>
+                        <a href="ADMIN_JD.html" style="text-decoration: none; color: black;">Admin</a>
                     </ul>
                 </div>
                 <div class="submit_img"><img src="g20.jpg" alt="" width="40px" height="45px"></div>
@@ -128,23 +128,23 @@
             <section class="table">
                 <ul>
                     <a href="ENTC_DEPARTMENT.html" class="fetchLink" data-elementid="hod_content" style="border-top: none;">About Department</a>
-                    <a href="ENTC_HOD_DESk.html" class="fetchLink" data-elementid="hod_content">HOD's Desk</a>
-                    <a href="ENTC_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & Staff</a>
-                    <a href="ENTC_Roll.html" class="fetchLink" data-elementid="student_roll">Student Roll</a>
-                    <a href="ENTC_TIMETABLE.html" class="fetchLink" data-elementid="timetable">Timetable</a>
-                    <a href="ENTC_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
-                    <a href="ENTC_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
-                    <a href="ENTC_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
-                    <a href="ENTC_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
-                    <a href="ENTC_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
-                    <a href="ENTC_ACHIEVENT.html" class="fetchLink" data-elementid="activity_content">Achievements/ Messages</a>
-                    <a href="ENTC_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
-                    <a href="ENTC_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
-                    <a href="ENTC_INDUSTRY.html" class="fetchLink" data-elementid="industry_in" style="font-size: 0.97rem;">Industry Institute Interaction</a>
-                    <a href="ENTC_LAB.html" class="fetchLink" data-elementid="lab-section">Laboratories</a>
-                    <a href="ENTC_AAC.html" class="fetchLink " data-elementid="timetable">AAC & Dept Meeting</a>
-                    <a href="ENTC_PLACEMENT.html" class="fetchLink " data-elementid="timetable">Placement Record</a>
-                    <a href="ENTC_MAGZINE.html" class="fetchLink" data-elementid="timetable">E-Magazine</a>
+                    <a href="Departments/ENTC/ENTC_HOD_DESk.html" class="fetchLink" data-elementid="hod_content">HOD's Desk</a>
+                    <a href="Departments/ENTC/ENTC_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & Staff</a>
+                    <a href="Departments/ENTC/ENTC_Roll.html" class="fetchLink" data-elementid="student_roll">Student Roll</a>
+                    <a href="Departments/ENTC/ENTC_TIMETABLE.html" class="fetchLink" data-elementid="timetable">Timetable</a>
+                    <a href="Departments/ENTC/ENTC_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
+                    <a href="Departments/ENTC/ENTC_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
+                    <a href="Departments/ENTC/ENTC_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
+                    <a href="Departments/ENTC/ENTC_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
+                    <a href="Departments/ENTC/ENTC_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
+                    <a href="Departments/ENTC/ENTC_ACHIEVENT.html" class="fetchLink" data-elementid="activity_content">Achievements/ Messages</a>
+                    <a href="Departments/ENTC/ENTC_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
+                    <a href="Departments/ENTC/ENTC_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
+                    <a href="Departments/ENTC/ENTC_INDUSTRY.html" class="fetchLink" data-elementid="industry_in" style="font-size: 0.97rem;">Industry Institute Interaction</a>
+                    <a href="Departments/ENTC/ENTC_LAB.html" class="fetchLink" data-elementid="lab-section">Laboratories</a>
+                    <a href="Departments/ENTC/ENTC_AAC.html" class="fetchLink " data-elementid="timetable">AAC & Dept Meeting</a>
+                    <a href="Departments/ENTC/ENTC_PLACEMENT.html" class="fetchLink " data-elementid="timetable">Placement Record</a>
+                    <a href="Departments/ENTC/ENTC_MAGZINE.html" class="fetchLink" data-elementid="timetable">E-Magazine</a>
                 </ul>
             </section>
             <div id="mainContent">
