--- a/IT_DEPARTMENT.html
+++ b/IT_DEPARTMENT.html
@@ -224,6 +224,7 @@
         </div>
     </div>
     <script src="buttons.js"></script>
+    <script src="script.js"></script>
     <script>
         function fetchAndDisplaySpecificContent(pageUrl, elementId) {
             fetch(pageUrl)
